// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interactions creates a new content item interaction 1`] = `
Object {
  "id": 1,
}
`;

exports[`Interactions creates a new content item interaction 2`] = `
Array [
  Array [
    "/Interactions/1",
  ],
]
`;

exports[`Interactions creates a new content item interaction 3`] = `
Array [
  Array [
    "/Interactions",
    Object {
      "InteractionComponentId": 789,
      "InteractionData": "apolloschurch://Interactions/ContentSingle?itemId=UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
      "InteractionSessionId": undefined,
      "InteractionSummary": "Like - Super Cool Content",
      "Operation": "Like",
      "PersonAliasId": 456,
    },
  ],
]
`;

exports[`Interactions creates a new interaction from a content item 1`] = `
Object {
  "nodeId": "UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
  "success": true,
}
`;

exports[`Interactions creates a new interaction from a content item 2`] = `Array []`;

exports[`Interactions creates a new interaction from a content item 3`] = `
Array [
  Array [
    "/Interactions",
    Object {
      "ForeignKey": "UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
      "InteractionComponentId": 321,
      "InteractionSessionId": undefined,
      "InteractionSummary": "VIEW",
      "Operation": "VIEW",
      "PersonAliasId": 456,
    },
  ],
]
`;

exports[`Interactions returns a success: false from an invalid nodeId 1`] = `
Object {
  "success": false,
}
`;

exports[`Interactions returns a success: false from an invalid nodeId 2`] = `Array []`;

exports[`Interactions returns a success: false from an invalid nodeId 3`] = `Array []`;
